--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ src='https://www.x3dom.org/download/x3dom.js'> </script>
 href='https://www.x3dom.org/download/x3dom.css'/>
 </head>
 <body>
-<h1>Cabecera página</h1>
+<h1>Nefertiti</h1>
 <p>
  Texto previo
 </p>
